Scrolling while playing youtube video is stuttery due to slow hw swapchain. The stutter persists with multiple "Error Handling webrender error 6" message in about:support
Categories
(Core :: Graphics, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox-esr115 | --- | unaffected |
| firefox115 | --- | unaffected |
| firefox116 | --- | verified |
| firefox117 | --- | verified |
People
(Reporter: mayankleoboy1, Assigned: sotaro)
References
(Regression, )
Details
(Keywords: regression)
Attachments
(3 files)
|
40.88 KB,
text/plain
|
Details | |
|
980 bytes,
patch
|
Details | Diff | Splinter Review | |
|
48 bytes,
text/x-phabricator-request
|
diannaS
:
approval-mozilla-beta+
|
Details | Review |
Go to https://www.youtube.com/watch?v=ncmZyI2-gZs
Start the video (without going full-screen)
Set resolution to 1080p.
Check that the video is av01
Scroll on the page.
Seek the video multiple times and continue to scroll
ER: The scrolling should stutter for a bit, and then get smooth (perhaps by the mechanism of bug 1818685?)
AR: Stuttery scroll.
Profile: https://share.firefox.dev/3pBUqcX
I get the following in about:support
(#0) GP+[GFX1-]: Hw video swapchain present is slow
(#01 Error Handling webrender error 6
(#32) Error Handling webrender error 6
(#33) Error Handling webrender error 6
(#34) Error Handling webrender error 6
(#35) Error Handling webrender error 6
(#36) Error Handling webrender error 6
(#37) Error Handling webrender error 6
(#38) Error Handling webrender error 6
(#39) Error Handling webrender error 6
(#40) Error Handling webrender error 6
(#41) Error Handling webrender error 6
(#42) Error Handling webrender error 6
(#43) Error Handling webrender error 6
(#44) Error Handling webrender error 6
(#45) Error Handling webrender error 6
(#46) Error Handling webrender error 6
Regression range:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=d2d0e0480c343331c593c2b8fc12743f72f3b2df&tochange=a0f7b9f56d1f3dd6b66ba0417bab9acccddc3ad9
Suspect: bug 1829063
Looks like bug 1829063 broke the mechanism added in bug 1818685
| Reporter | ||
Comment 1•2 years ago
|
||
This is a bad regression that affects playing youtube videos. If possible, there should be some tests for this.
| Reporter | ||
Updated•2 years ago
|
Comment 2•2 years ago
|
||
Set release status flags based on info from the regressing bug 1829063
:sotaro, since you are the author of the regressor, bug 1829063, could you take a look?
For more information, please visit BugBot documentation.
| Reporter | ||
Updated•2 years ago
|
| Reporter | ||
Updated•2 years ago
|
Comment 3•2 years ago
|
||
:bhood could you evaluate the priority/severity on this? Seems like something we would not want to release with.
| Assignee | ||
Updated•2 years ago
|
| Reporter | ||
Comment 4•2 years ago
|
||
| Assignee | ||
Comment 5•2 years ago
|
||
The patch tries to disable video overlay during video playback.
| Assignee | ||
Comment 6•2 years ago
|
||
I do not have a PC that cause the problem. Then Attachment 9344058 [details] [diff] was created to do similar thing. With the patch, sw decoded video overlay was not disabled with the patch. Hw decoded video overlay was disabled as expected.
| Assignee | ||
Comment 7•2 years ago
|
||
Updated•2 years ago
|
Comment 9•2 years ago
|
||
| bugherder | ||
Comment 10•2 years ago
|
||
The patch landed in nightly and beta is affected.
:sotaro, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox116towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 11•2 years ago
|
||
Hi Mayank Bansal, can you check if the problem is addressed with latest nightly?
| Reporter | ||
Comment 12•2 years ago
|
||
This seems to be fixed.
I get stuttery scroll when I scroll for the first 2-3 times. Then it smoothens.
The following is printed in about:support gfx log:
(#0) GP+[GFX1-]: Sw video swapchain present is slow
(#1) Error Handling webrender error 7
(#2) Error Handling webrender error 7
(#3) Error Handling webrender error 7
| Assignee | ||
Comment 13•2 years ago
|
||
Thank you!
| Assignee | ||
Comment 14•2 years ago
|
||
Comment on attachment 9344059 [details]
Bug 1842253 - Override IsSoftwareDecodedVideo() at RenderTextureHostWrapper
Beta/Release Uplift Approval Request
- User impact if declined: If Software decoded video's overlay rendering is slow during scrolling, the stutter persists.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The fix just addressed RenderTextureHostWrapper::IsSoftwareDecodedVideo(). And the IsSoftwareDecodedVideo() is used only when the stutter happens.
- String changes made/needed: none
- Is Android affected?: No
Comment 15•2 years ago
|
||
Comment on attachment 9344059 [details]
Bug 1842253 - Override IsSoftwareDecodedVideo() at RenderTextureHostWrapper
Approved for 116.0b8
Comment 16•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
Updated•2 years ago
|
Updated•2 years ago
|
Comment 17•2 years ago
|
||
Hello,
Managed to reproduce this issue with 117.0a1(20230707220336) on Windows 11.
Confirming this issue as verified fixed with 116.0b8(20230720200012) and 117.0a1(20230723212527) using Windows 11, macOS 14 and Ubuntu 22.
Description
•