Bug 1842253 - Override IsSoftwareDecodedVideo() at RenderTextureHostWrapper r=gfx-reviewers,lsalzman

RenderTextureHosts of video frames are normally wrapped by RenderTextureHostWrapper. Then IsSoftwareDecodedVideo() needs to be overridden.

Differential Revision: https://phabricator.services.mozilla.com/D183649